feat(turnouts): model composite logical turnouts
